@startuml

title __FOREVERBUFFS's Class Diagram__\n

  namespace gamesource {
    namespace battleState.utils.buffs {
      namespace foreverBuffs {
        class gamesource.battleState.utils.buffs.foreverBuffs.Artifact {
            + Artifact()
            + getDescription()
            + getFunc()
            + triggerFunc()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.utils.buffs {
      namespace foreverBuffs {
        class gamesource.battleState.utils.buffs.foreverBuffs.Dexterity {
            + Dexterity()
            + getDescription()
            + getFunc()
            + triggerFunc()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.utils.buffs {
      namespace foreverBuffs {
        class gamesource.battleState.utils.buffs.foreverBuffs.Dodge {
            + Dodge()
            + getDescription()
            + getFunc()
            + triggerFunc()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.utils.buffs {
      namespace foreverBuffs {
        class gamesource.battleState.utils.buffs.foreverBuffs.Strength {
            + Strength()
            + getDescription()
            + getFunc()
            + triggerFunc()
        }
      }
    }
  }
  

  gamesource.battleState.utils.buffs.foreverBuffs.Artifact .up.|> gamesource.battleState.utils.buffs.BuffFunction
  gamesource.battleState.utils.buffs.foreverBuffs.Artifact -up-|> gamesource.battleState.utils.buffs.ForeverBuff
  gamesource.battleState.utils.buffs.foreverBuffs.Dexterity .up.|> gamesource.battleState.utils.buffs.BuffFunction
  gamesource.battleState.utils.buffs.foreverBuffs.Dexterity -up-|> gamesource.battleState.utils.buffs.ForeverBuff
  gamesource.battleState.utils.buffs.foreverBuffs.Dodge .up.|> gamesource.battleState.utils.buffs.BuffFunction
  gamesource.battleState.utils.buffs.foreverBuffs.Dodge -up-|> gamesource.battleState.utils.buffs.ForeverBuff
  gamesource.battleState.utils.buffs.foreverBuffs.Strength .up.|> gamesource.battleState.utils.buffs.BuffFunction
  gamesource.battleState.utils.buffs.foreverBuffs.Strength -up-|> gamesource.battleState.utils.buffs.ForeverBuff




@enduml
